--- a/index.html
+++ b/index.html
@@ -300,14 +300,14 @@
                                     <ol>
                                         <li><a href="#" data-date="01/08/2010" style="left: 200px;">2010</a></li>
                                         <li><a href="#" data-date="01/03/2011" style="left: 200px;">2011</a></li>
-                                        <li><a href="#" data-date="17/06/2013" class="older-event selected">2013</a></li>
+                                        <li><a href="#" data-date="17/06/2013" style="left: 200px;">2013</a></li>
                                         <li><a href="#" data-date="01/08/2015" style="left: 200px;">2015</a></li>
                                         <li><a href="#" data-date="09/08/2017" style="left: 200px;">2017</a></li>
                                         <li><a href="#" data-date="19/08/2019" style="left: 200px;">2019</a></li>
                                         <li><a href="#" data-date="18/10/2021" style="left: 200px;">2021</a></li>
                                         <li><a href="#" data-date="22/08/2022" style="left: 200px;">2022</a></li>
                                         <li><a href="#" data-date="22/02/2024" style="left: 200px;">2024</a></li>
-                                        <li><a href="#" data-date="07/01/2025" style="left: 200px;">2025</a></li>
+                                        <li><a href="#" data-date="07/01/2025" class="older-event selected">2025</a></li>
                                     </ol>
                                     <span class="filling-line" aria-hidden="true"></span>
                                 </div>
@@ -386,7 +386,7 @@
                                     </div>
                                 </li>
                                 <!-- lulus smp + masuk sma -->
-                                <li class="selected" data-date="17/06/2013">
+                                <li data-date="17/06/2013">
                                     <!-- Main Content Div -->
                                     <div class="col-12 pl-md-0">
                                         <div class="main-content text-uppercase">
@@ -597,7 +597,7 @@
                                     </div>
                                 </li>
                                 <!-- lulus kuliah- cari kerja -->
-                                <li data-date="07/01/2025">
+                                <li class="selected" data-date="07/01/2025">
                                     <!-- Main Content Div -->
                                     <div class="col-12 pl-md-0">
                                         <div class="main-content text-uppercase">
@@ -637,10 +637,10 @@
             <div class="row pb-5 heading-row">
                 <div class="col-12 col-md-7">
                     <h3 class="main-font text-uppercase"><span class="text-yellow d-block"> PORTFOLIO </span> <span> MY RECENT WORK </span></h3>
-                    <p class="py-1 alt-font">I believe in art and that is my passion throughout my life.</p>
+                    <p class="py-1 alt-font">The grind never betrays you—only excuses do.</p>
                 </div>
                 <div class="col-12 col-md-5 text-md-right pt-4 pt-md-0">
-                    <h2 class="m-0 text-yellow main-font">20</h2>
+                    <h2 class="m-0 text-yellow main-font">10+</h2>
                     <p class="alt-font">Portfolio Items</p>
                 </div>
             </div>
@@ -659,14 +659,14 @@
                                             <span class="cases-line top-right"></span>
                                             <span class="cases-line bottom"></span>
                                             <span class="cases-line bottom-left"></span>
-                                            <h6 class="text-white text-uppercase alt-font">Strategy Buildup</h6>
+                                            <h6 class="text-white text-uppercase alt-font">Internet of Things, Website, Cloud Computing</h6>
                                         </div>
                                     </div>
                                 </div>
                                 </a>
                                 <div class="portfolio-content">
-                                    <h5 class="text-yellow main-font mb-2 text-uppercase">Corporate Website</h5>
-                                    <p class="text-capitalize">Curabitur mollis bibendum luctus. Duis suscipit vitae dui sed suscipit. </p>
+                                    <h5 class="text-yellow main-font mb-2 text-uppercase">Tracking System using IoT</h5>
+                                    <p class="text-capitalize">Developing website integrated with IoT with MQTT protocol.</p>
                                 </div>
                             </div>
                         </div>
@@ -682,14 +682,14 @@
                                             <span class="cases-line top-right"></span>
                                             <span class="cases-line bottom"></span>
                                             <span class="cases-line bottom-left"></span>
-                                            <h6 class="text-white text-uppercase alt-font">Business Planning</h6>
+                                            <h6 class="text-white text-uppercase alt-font">Machine Learning</h6>
                                         </div>
                                     </div>
                                 </div>
                                 </a>
                                 <div class="portfolio-content">
-                                    <h5 class="text-yellow main-font mb-2 text-uppercase">My Presentation</h5>
-                                    <p class="text-capitalize">Curabitur mollis bibendum luctus. Duis suscipit vitae dui sed suscipit. </p>
+                                    <h5 class="text-yellow main-font mb-2 text-uppercase">Learn about Machine Learning</h5>
+                                    <p class="text-capitalize">Collection of machine learning algoritm I learned.</p>
                                 </div>
                             </div>
                         </div>
@@ -705,14 +705,14 @@
                                             <span class="cases-line top-right"></span>
                                             <span class="cases-line bottom"></span>
                                             <span class="cases-line bottom-left"></span>
-                                            <h6 class="text-white text-uppercase alt-font">Creative Ideas</h6>
+                                            <h6 class="text-white text-uppercase alt-font">Neural Network</h6>
                                         </div>
                                     </div>
                                 </div>
                                 </a>
                                 <div class="portfolio-content">
-                                    <h5 class="text-yellow main-font mb-2 text-uppercase">Graphic Portfolio</h5>
-                                    <p class="text-capitalize">Curabitur mollis bibendum luctus. Duis suscipit vitae dui sed suscipit. </p>
+                                    <h5 class="text-yellow main-font mb-2 text-uppercase">Learn About Neural Network</h5>
+                                    <p class="text-capitalize">Collection of Neural Network Algoritm I learned</p>
                                 </div>
                             </div>
                         </div>
@@ -728,14 +728,14 @@
                                                 <span class="cases-line top-right"></span>
                                                 <span class="cases-line bottom"></span>
                                                 <span class="cases-line bottom-left"></span>
-                                                <h6 class="text-white text-uppercase alt-font">Strategy Buildup</h6>
+                                                <h6 class="text-white text-uppercase alt-font">Networking</h6>
                                             </div>
                                         </div>
                                     </div>
                                 </a>
                                 <div class="portfolio-content">
-                                    <h5 class="text-yellow main-font mb-2 text-uppercase">Corporate Website</h5>
-                                    <p class="text-capitalize">Curabitur mollis bibendum luctus. Duis suscipit vitae dui sed suscipit. </p>
+                                    <h5 class="text-yellow main-font mb-2 text-uppercase">Learn About Networking</h5>
+                                    <p class="text-capitalize">Collection of Networking Theorem I learned</p>
                                 </div>
                             </div>
                         </div>
@@ -751,37 +751,14 @@
                                                 <span class="cases-line top-right"></span>
                                                 <span class="cases-line bottom"></span>
                                                 <span class="cases-line bottom-left"></span>
-                                                <h6 class="text-white text-uppercase alt-font">Business Planning</h6>
+                                                <h6 class="text-white text-uppercase alt-font">SDLC, Scrum, Web Developer, Software Engineer</h6>
                                             </div>
                                         </div>
                                     </div>
                                 </a>
                                 <div class="portfolio-content">
-                                    <h5 class="text-yellow main-font mb-2 text-uppercase">My Presentation</h5>
-                                    <p class="text-capitalize">Curabitur mollis bibendum luctus. Duis suscipit vitae dui sed suscipit. </p>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- Item 6 -->
-                        <div class="item">
-                            <div class="team-data-img">
-                                <a href="personal-hotspot/images/portfolio-img-6.jpg" data-fancybox="images">
-                                    <div class="single-work">
-                                        <img src="personal-hotspot/images/portfolio-img-6.jpg" alt="team" class="img-responsive" data-no-retina>
-                                        <div class="overlay-text center-block">
-                                            <div class="cases-image-inner">
-                                                <span class="cases-line top"></span>
-                                                <span class="cases-line top-right"></span>
-                                                <span class="cases-line bottom"></span>
-                                                <span class="cases-line bottom-left"></span>
-                                                <h6 class="text-white text-uppercase alt-font">Creative Ideas</h6>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </a>
-                                <div class="portfolio-content">
-                                    <h5 class="text-yellow main-font mb-2 text-uppercase">Graphic Portfolio</h5>
-                                    <p class="text-capitalize">Curabitur mollis bibendum luctus. Duis suscipit vitae dui sed suscipit. </p>
+                                    <h5 class="text-yellow main-font mb-2 text-uppercase">Product Profile Website + CMS</h5>
+                                    <p class="text-capitalize">Internship project, product profile website + CMS for PT Nakula Sadewa</p>
                                 </div>
                             </div>
                         </div>
@@ -803,12 +780,12 @@
         <div class="container">
             <div class="row pb-5 heading-row">
                 <div class="col-12 col-md-7">
-                    <h3 class="main-font text-uppercase"><span class="text-yellow d-block text-uppercase"> Customers </span> <span> love the work i do </span></h3>
-                    <p class="py-2 heading-row alt-font">Please look what my clients say about my exceptional work</p>
+                    <h3 class="main-font text-uppercase"><span class="text-yellow d-block text-uppercase"> Hobby </span> <span> I do love what I do </span></h3>
+                    <p class="py-2 heading-row alt-font">"Passion turns spare time into golden time."</p>
                 </div>
                 <div class="col-12 col-md-5 text-md-right pt-4 pt-md-0">
-                    <h2 class="m-0 text-yellow main-font">200+</h2>
-                    <p class="alt-font">Clients Worldwide</p>
+                    <h2 class="m-0 text-yellow main-font">100% with love</h2>
+                    <p class="alt-font">Things I do love to do</p>
                 </div>
             </div>
 
